--- a/FoodPlanner/FoodPlanner/Views/MealPlanPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/MealPlanPage.xaml
@@ -32,19 +32,19 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Button Command="{Binding PreviousWeekCommand}" Grid.Row="0" Style="{DynamicResource ButtonIconTemplate}">
+        <Button Command="{Binding PreviousWeekCommand}" Grid.Row="0" Style="{StaticResource ButtonIconTemplate}">
             <Button.Background>
                 <ImageBrush ImageSource="/Images/upArrowIcon.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
-        <Label Content="{Binding Path=MondayString, Mode=OneWay}" Grid.Row="1" Style="{DynamicResource TextLabelTemplate}"/>
-        <Label Content="{Binding Path=TuesdayString, Mode=OneWay}" Grid.Row="2" Style="{DynamicResource TextLabelTemplate}"/>
-        <Label Content="{Binding Path=WednesdayString, Mode=OneWay}" Grid.Row="3" Style="{DynamicResource TextLabelTemplate}"/>
-        <Label Content="{Binding Path=ThursdayString, Mode=OneWay}" Grid.Row="4" Style="{DynamicResource TextLabelTemplate}"/>
-        <Label Content="{Binding Path=FridayString, Mode=OneWay}" Grid.Row="5" Style="{DynamicResource TextLabelTemplate}"/>
-        <Label Content="{Binding Path=SaturdayString, Mode=OneWay}" Grid.Row="6" Style="{DynamicResource TextLabelTemplate}"/>
-        <Label Content="{Binding Path=SundayString, Mode=OneWay}" Grid.Row="7" Style="{DynamicResource TextLabelTemplate}"/>
-        <Button Command="{Binding NextWeekCommand}" Content="\/" Grid.Row="8" Style="{DynamicResource ButtonIconTemplate}">
+        <Label Content="{Binding Path=MondayString, Mode=OneWay}" Grid.Row="1" Style="{StaticResource TextLabelTemplate}"/>
+        <Label Content="{Binding Path=TuesdayString, Mode=OneWay}" Grid.Row="2" Style="{StaticResource TextLabelTemplate}"/>
+        <Label Content="{Binding Path=WednesdayString, Mode=OneWay}" Grid.Row="3" Style="{StaticResource TextLabelTemplate}"/>
+        <Label Content="{Binding Path=ThursdayString, Mode=OneWay}" Grid.Row="4" Style="{StaticResource TextLabelTemplate}"/>
+        <Label Content="{Binding Path=FridayString, Mode=OneWay}" Grid.Row="5" Style="{StaticResource TextLabelTemplate}"/>
+        <Label Content="{Binding Path=SaturdayString, Mode=OneWay}" Grid.Row="6" Style="{StaticResource TextLabelTemplate}"/>
+        <Label Content="{Binding Path=SundayString, Mode=OneWay}" Grid.Row="7" Style="{StaticResource TextLabelTemplate}"/>
+        <Button Command="{Binding NextWeekCommand}" Content="\/" Grid.Row="8" Style="{StaticResource ButtonIconTemplate}">
             <Button.Background>
                 <ImageBrush ImageSource="/Images/downArrowIcon.png" Stretch="Uniform"/>
             </Button.Background>
