--- a/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
@@ -23,30 +23,36 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         
-        <Border Grid.ColumnSpan="2" BorderThickness="0 0 0 2" BorderBrush="Black"/>
+        <Border Grid.ColumnSpan="3" BorderThickness="0 0 0 2" BorderBrush="Black"/>
 
         <Button x:Name="TopBarButton" Command="{Binding Source={x:Static local:Navigator.GoBackCommand}}" Style="{StaticResource ButtonIconTemplate}" HorizontalAlignment="Left" Width="{Binding ElementName=TopBarButton, Path=ActualHeight}">
             <Button.Background>
                 <ImageBrush ImageSource="../Images/backArrowIcon.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
-        <Button Style="{StaticResource ButtonIconTemplate}" Grid.Column="1" HorizontalAlignment="Right" Width="{Binding ElementName=TopBarButton, Path=ActualHeight}">
-            <Button.Background>
-                <ImageBrush ImageSource="../Images/plusIcon.png" Stretch="Uniform"/>
-            </Button.Background>
-        </Button>
+
+        <StackPanel Grid.Column="2" Orientation="Horizontal">
+            <DatePicker Height="{Binding ElementName=TopBarButton, Path=ActualHeight}" Visibility="Collapsed"/>
+            <Button Style="{StaticResource ButtonIconTemplate}" HorizontalAlignment="Right" Height="{Binding ElementName=TopBarButton, Path=ActualHeight}" Width="{Binding ElementName=TopBarButton, Path=ActualHeight}">
+                <Button.Background>
+                    <ImageBrush ImageSource="../Images/plusIcon.png" Stretch="Uniform"/>
+                </Button.Background>
+            </Button>
+            
+        </StackPanel>
 
         <Image Grid.Row="1" Grid.RowSpan="2" Height="100" Width="100" Source="{Binding Image}"/>
 
-        <Label Grid.Column="1" Grid.Row="1" Style="{StaticResource LabelTitle}">
+        <Label Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Style="{StaticResource LabelTitle}">
             <Label.Content>
                 <AccessText TextWrapping="Wrap" Text="{Binding Title}"/>
             </Label.Content>
         </Label>
 
-        <ScrollViewer Grid.Column="1" Grid.Row="2" Grid.RowSpan="2" Padding="5,0,0,0">
+        <ScrollViewer Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2" Grid.RowSpan="2" Padding="5,0,0,0">
             <TextBlock Text="{Binding RecipesPreparation.Preparation}" TextWrapping="Wrap"/>
         </ScrollViewer>
 
