Settings lavet som stackpanel

--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -11,8 +11,131 @@
     <Page.DataContext>
         <ViewModels:SettingsViewModel/>
     </Page.DataContext>
+    <StackPanel>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
 
-    <Grid>
+            <TextBlock Text="User Specifics" FontSize="16"/>
+            <TextBlock Text="Persons in the household:" Padding="0,5,5,5" Grid.Row="1"/>
+            <TextBlock Text="{Binding CurrentUser.PersonsInHouseHold}" Grid.Row="1" Grid.Column="1" Padding="5"/>
+            <Button Content="Plus" Grid.Row="1" Grid.Column="3" Padding="5"/>
+            <Button Content="Minus" Grid.Row="1" Grid.Column="2" Padding="5"/>
+
+            <TextBlock Text="Number of days to shop for:" Grid.Row="2" Padding="0,5,5,5"/>
+            <TextBlock Text="{Binding CurrentUser.ShopAhead}" Grid.Row="2" Grid.Column="1" Padding="5"/>
+            <Button Content="Plus" Grid.Column="3" Grid.Row="2" Padding="5"/>
+            <Button Content="Minus" Grid.Column="2" Grid.Row="2" Padding="5"/>
+
+            <TextBlock Text="Start up screen" Grid.Row="3" Padding="0,5,5,5"/>
+            <ComboBox Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="2"/>
+
+            <Button Content="Save changes" Grid.Row="4" Grid.Column="4"/>
+        </Grid>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Text="Stock Management" FontSize="16" Grid.ColumnSpan="2"/>
+            <TextBlock Text="Stock List" Grid.Row="1" Grid.Column="1" FontSize="14" TextDecorations="Underline"/>
+            <ListView Grid.Row="2" Grid.ColumnSpan="3" ItemsSource="{Binding CurrentUser.StockQuantities}">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Width="Auto" Header="Name" CellTemplate="{StaticResource ShoppingListNameCell}"/>
+                        <GridViewColumn Width="Auto" Header="Quantity And Unit" CellTemplate="{StaticResource ShoppingListUnitAndQuantityCell}"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+            <Button Content="Remove Ingredient" Grid.Row="3"/>
+
+            <TextBlock Text="Add a new stock ingredient" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" FontSize="14" TextDecorations="Underline"/>
+            <TextBlock Text="Name" Grid.Row="5"/>
+            <TextBlock Text="Quantity" Grid.Row="5" Grid.Column="1"/>
+            <TextBlock Text="Unit" Grid.Row="5" Grid.Column="2"/>
+            <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveListItemCommand}"
+                                             MaximumItems="10" Grid.Row="6" Grid.RowSpan="3"/>
+
+            <TextBox x:Name="QuantityTextBox" Grid.Row="6" Grid.Column="1"/>
+            <TextBlock Text="{Binding InventoryIngredient.Ingredient.Unit, Mode=OneWay}" Grid.Row="6" Grid.Column="2"/>
+            <Button Grid.Row="7" Content="Add Ingredient" Grid.Column="3"/>
+        </Grid>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Text="Favorite Ingredients" FontSize="16" Grid.ColumnSpan="2"/>
+            <TextBlock Text="Favorite ingredients list" FontSize="14" TextDecorations="Underline" Grid.Row="1" Grid.ColumnSpan="2"/>
+            <ListBox ItemsSource="{Binding Path=GraylistIngredients}" Grid.Row="2" Grid.ColumnSpan="2">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Path=Ingredient.Name}"/>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+            <Button Content="Remove" Grid.Row="3" Grid.Column="1"/>
+        </Grid>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Text="Unwanted Ingredients" FontSize="16" />
+            <TextBlock Text="Favorite ingredients list" FontSize="14" TextDecorations="Underline" Grid.Row="1" Grid.ColumnSpan="2"/>
+            <ListBox ItemsSource="{Binding Path=CurrentUser.GraylistIngredients}" Grid.Row="2" Grid.ColumnSpan="2">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Path=Ingredient.Name}"/>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+            <Button Content="Remove" Grid.Row="3" Grid.Column="1"/>
+        </Grid>
+    </StackPanel>
+    <!--<Grid>
         <ListBox>
             <Expander Header="User speficics">
                 <Grid>
@@ -141,5 +264,5 @@
                 </Grid>
             </Expander>
         </ListBox>
-    </Grid>
+    </Grid>-->
 </Page>
