Setting commands tilføjet til Unwanted ingredients

--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -30,12 +30,12 @@
 
             <TextBlock Text="User Specifics" FontSize="16"/>
             <TextBlock Text="Persons in the household:" Padding="0,5,5,5" Grid.Row="1"/>
-            <TextBlock Text="{Binding CurrentUser.PersonsInHouseHold}" Grid.Row="1" Grid.Column="1" Padding="5"/>
+            <TextBlock Text="{Binding CurrentUser.PersonsInHouseHold, Mode=OneWay}" Grid.Row="1" Grid.Column="1" Padding="5"/>
             <Button Content="Plus" Grid.Row="1" Grid.Column="3" Padding="5"/>
             <Button Content="Minus" Grid.Row="1" Grid.Column="2" Padding="5"/>
 
             <TextBlock Text="Number of days to shop for:" Grid.Row="2" Padding="0,5,5,5"/>
-            <TextBlock Text="{Binding CurrentUser.ShopAhead}" Grid.Row="2" Grid.Column="1" Padding="5"/>
+            <TextBlock Text="{Binding CurrentUser.ShopAhead, Mode=OneWay}" Grid.Row="2" Grid.Column="1" Padding="5"/>
             <Button Content="Plus" Grid.Column="3" Grid.Row="2" Padding="5"/>
             <Button Content="Minus" Grid.Column="2" Grid.Row="2" Padding="5"/>
 
@@ -63,8 +63,8 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Text="Stock Management" FontSize="16" Grid.ColumnSpan="2"/>
-            <TextBlock Text="Stock List" Grid.Row="1" Grid.Column="1" FontSize="14" TextDecorations="Underline"/>
-            <ListView Grid.Row="2" Grid.ColumnSpan="3" ItemsSource="{Binding CurrentUser.StockQuantities}">
+            <TextBlock Text="Stock List" Grid.Row="1" FontSize="14" TextDecorations="Underline"/>
+            <ListView x:Name="StockListView" Grid.Row="2" Grid.ColumnSpan="3" ItemsSource="{Binding CurrentUser.StockQuantities}">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Width="Auto" Header="Name" CellTemplate="{StaticResource ShoppingListNameCell}"/>
@@ -72,9 +72,9 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            <Button Content="Remove Ingredient" Grid.Row="3"/>
+            <Button Content="Remove Ingredient" Grid.Row="3" Grid.Column="2"/>
 
-            <TextBlock Text="Add a new stock ingredient" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" FontSize="14" TextDecorations="Underline"/>
+            <TextBlock Text="Add a new stock ingredient" Grid.Row="4" Grid.ColumnSpan="3" FontSize="14" TextDecorations="Underline"/>
             <TextBlock Text="Name" Grid.Row="5"/>
             <TextBlock Text="Quantity" Grid.Row="5" Grid.Column="1"/>
             <TextBlock Text="Unit" Grid.Row="5" Grid.Column="2"/>
@@ -83,7 +83,7 @@
 
             <TextBox x:Name="QuantityTextBox" Grid.Row="6" Grid.Column="1"/>
             <TextBlock Text="{Binding InventoryIngredient.Ingredient.Unit, Mode=OneWay}" Grid.Row="6" Grid.Column="2"/>
-            <Button Grid.Row="7" Content="Add Ingredient" Grid.Column="3"/>
+                <Button Grid.Row="7" Content="Add Ingredient" Grid.Column="3"/>
         </Grid>
         <Grid>
             <Grid.RowDefinitions>
@@ -101,7 +101,7 @@
 
             <TextBlock Text="Favorite Ingredients" FontSize="16" Grid.ColumnSpan="2"/>
             <TextBlock Text="Favorite ingredients list" FontSize="14" TextDecorations="Underline" Grid.Row="1" Grid.ColumnSpan="2"/>
-            <ListBox ItemsSource="{Binding Path=GraylistIngredients}" Grid.Row="2" Grid.ColumnSpan="2">
+            <ListBox x:Name="FavoriteIngredientsList" ItemsSource="{Binding Path=CurrentUser.GraylistIngredients}" Grid.Row="2" Grid.ColumnSpan="2">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Path=Ingredient.Name}"/>
@@ -113,9 +113,11 @@
             <TextBlock Text="Add new favorite ingredient" TextDecorations="Underline" Grid.Row="4"/>
             <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveListItemCommand}"
                                              MaximumItems="10" Grid.Row="5" Grid.RowSpan="5"/>
+            <TextBlock Text="Set ingredient value" Grid.Row="6" Grid.Column="1"/>
         </Grid>
         <Grid>
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -128,8 +130,8 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Text="Unwanted Ingredients" FontSize="16" />
-            <TextBlock Text="Favorite ingredients list" FontSize="14" TextDecorations="Underline" Grid.Row="1" Grid.ColumnSpan="2"/>
-            <ListBox ItemsSource="{Binding Path=CurrentUser.GraylistIngredients}" Grid.Row="2" Grid.ColumnSpan="2">
+            <TextBlock Text="Unwanted ingredients list" FontSize="14" TextDecorations="Underline" Grid.Row="1" Grid.ColumnSpan="2"/>
+            <ListBox x:Name="UnwantedIngredientsList" SelectedItem="{Binding SelectedBlackListIngredient}"  ItemsSource="{Binding Path=CurrentUser.BlacklistIngredients}" Grid.Row="2" Grid.ColumnSpan="2">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Path=Ingredient.Name}"/>
@@ -137,7 +139,11 @@
                 </ListBox.ItemTemplate>
             </ListBox>
 
-            <Button Content="Remove" Grid.Row="3" Grid.Column="1"/>
+            <Button Content="Remove" Command="{Binding RemoveIngredientFromUnwantedIngredientsCommand}" Grid.Row="3" Grid.Column="1"/>
+            <TextBlock Text="Add unwanted ingredient" TextDecorations="Underline" Grid.Row="4"/>
+            <!--Når denne bokses udvides vil der ske fejl klik!!!-->
+            <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddIngredientToUnwantedIngredientsCommand}"
+                                             MaximumItems="10" Grid.Row="5"/>
         </Grid>
     </ListBox>
     <!--<Grid>
