--- a/FoodPlanner/FoodPlanner/App.xaml
+++ b/FoodPlanner/FoodPlanner/App.xaml
@@ -16,9 +16,14 @@
         <SolidColorBrush x:Key="BackgroundColour" Color="#E2E2E2"/>
 
         <!--Start: Template for Title text-->
-        <Style TargetType="Label" x:Key="LabelTitle">
+        <Style TargetType="{x:Type Control}" x:Key="TextTitle">
             <Setter Property="Foreground" Value="{StaticResource Text.Orange}"/>
-            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="FontSize" Value="14"/>
+        </Style>
+
+        <Style TargetType="{x:Type TextBlock}" x:Key="TextblockTitle">
+            <Setter Property="Foreground" Value="{StaticResource Text.Orange}"/>
+            <Setter Property="FontSize" Value="16"/>
         </Style>
         <!--End: Template for Title text-->
 
@@ -73,7 +78,7 @@
                             </Grid.RowDefinitions>
                             <Image  Grid.RowSpan="2" Height="75" Width="75" Stretch="UniformToFill" Source="{Binding recipe.Image}" />
                             <Label Grid.Column="1"  Grid.Row="1" Content="{Binding getMatchPercentage}" ContentStringFormat=" {0} ingredients"/>
-                            <TextBlock Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding recipe.Title}" Padding="5 0 5 0" TextTrimming="CharacterEllipsis" FontSize="20" Foreground="{StaticResource Text.Orange}"/>
+                            <TextBlock Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding recipe.Title}" Padding="5 0 5 0" TextTrimming="CharacterEllipsis"  Style="{StaticResource TextblockTitle}" FontSize="20"/>
                             <StackPanel x:Name="addStackpannel" Orientation="Horizontal" Grid.Column="2" Grid.Row="1" Height="30"  HorizontalAlignment="Right">
                                 <DatePicker Margin="5 0 5 0" Visibility="Collapsed"/>
                                 <Button Style="{StaticResource ButtonIconTemplate}" Width="30" Height="{Binding ElementName=addStackpannel, Path=ActualHeight}" Margin="0 0 5 0">
